--- a/website-projexts/Views/Home/Index.cshtml
+++ b/website-projexts/Views/Home/Index.cshtml
@@ -9,13 +9,13 @@
 <body>
     <main class="page lanidng-page">
         <section>
-            <div data-bss-parallax-bg="true" style="height: 600px;background-image: url(&quot;assets/img/pexels-rdne-stock-project-6646918.jpg&quot;);background-position: center;background-size: cover;">
+            <div data-bss-parallax-bg="true" style="height: 600px; background-image: url('/Content/img/header.jpg'); background-position: center; background-size: cover;">
                 <div class="container h-100">
                     <div class="row h-100">
                         <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
                             <div style="max-width: 350px;">
-                                <h1 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h1>
-                                <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Button</a>
+                                <h1 class="text-uppercase fw-bold">Bắt Đầu bảo vệ trái đất từ COMPANY</h1>
+                                <p class="my-3">Chúng tôi trao quyền cho bạn hành động. Bằng cách hỗ trợ các dự án của chúng tôi, bạn tạo ra sự khác biệt trong việc bảo vệ hành tinh của chúng ta.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#"><strong>Đăng Ký&nbsp;</strong></a><a class="btn btn-outline-primary btn-lg" role="button" href="#"><strong>Tìm hiểu thêm</strong></a>
                             </div>
                         </div>
                     </div>
@@ -25,15 +25,15 @@
         <section class="portfolio-block skills">
             <div class="container">
                 <div class="heading">
-                    <h2>Special Skills</h2>
+                    <h2>Hãy Chọn Chúng Tôi</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title">Web Design</h3>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <h3 class="card-title">Dễ Dàng Sử Dụng</h3>
+                                <p class="card-text"><br><span style="color: rgb(32, 33, 36); background-color: rgb(248, 249, 250);">Trang web của chúng tôi được thiết kế chu đáo để đơn giản. Điều hướng dễ dàng và các danh mục dự án rõ ràng đảm bảo rằng mọi người đều có thể góp phần bảo vệ môi trường một cách dễ dàng.</span><br><br></p>
                             </div>
                         </div>
                     </div>
@@ -41,8 +41,8 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title">Interface Design</h3>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <h3 class="card-title">Chia Sẻ Hy Vọng</h3>
+                                <p class="card-text">Hãy tham gia đóng góp tài chính để cùng chia sẻ niềm hy vọng và hành động vì một tương lai tươi sáng hơn. Chúng ta có thể thay đổi thế giới bằng sự đóng góp của mỗi người.</p>
                             </div>
                         </div>
                     </div>
@@ -50,40 +50,39 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
                             <div class="card-body">
-                                <h3 class="card-title">Photography and Print</h3>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <h3 class="card-title">Tổ Chức Phi Lợi Nhuận</h3>
+                                <p class="card-text">Trang web của chúng tôi hoạt động dưới hình thức phi lợi nhuận với mục tiêu tận tâm bảo vệ môi trường. Chúng tôi không đặt mục tiêu kiếm lợi nhuận cá nhân mà tập trung vào một mục tiêu cao cả hơn: bảo vệ và duy trì sự cân bằng của môi trường tự nhiên.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section>
+        <section style="background-color: #2B7C5F;">
             <div class="container py-4 py-xl-5">
                 <div class="row mb-5">
                     <div class="col-md-8 col-xl-6 text-center mx-auto">
-                        <h2>Heading</h2>
-                        <p class="w-lg-50">Curae hendrerit donec commodo hendrerit egestas tempus, turpis facilisis nostra nunc. Vestibulum dui eget ultrices.</p>
+                        <h2 style="color: white;"><strong>Dự Án Trên COMPANY</strong></h2>
                     </div>
                 </div>
                 <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
                     <div class="col">
                         <div class="card">
-                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Content/img/project1.jpeg">
                             <div class="card-body p-4">
-                                <p class="text-primary card-text mb-0">Article</p>
-                                <h4 class="card-title"><strong>Lorem libero donec</strong></h4>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <p class="text-primary card-text mb-0">Cây cối</p>
+                                <h4 class="card-title"><strong>10 nghìn = 1 cây</strong></h4>
+                                <p class="card-text">Dự án này là một sáng kiến phi lợi nhuận với mục tiêu đơn giản: mỗi khoản quyên góp 10 nghìn đồng sẽ được dùng để trồng một cây xanh.&nbsp;</p>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                                 </div>
                                 <div class="d-flex">
                                     <div class="float-start">
-                                        <p class="fw-bold float-start mb-0">Raised</p>
+                                        <p class="fw-bold float-start mb-0">Quyên góp</p>
                                         <p class="text-muted mb-0">65,000$</p>
                                     </div>
                                     <div class="float-end ms-auto">
-                                        <p class="fw-bold mb-0">Goal</p>
+                                        <p class="fw-bold mb-0">Mục tiêu</p>
                                         <p class="text-muted mb-0">65,000$</p>
                                     </div>
                                 </div>
@@ -92,11 +91,11 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Content/img/project2.jpeg">
                             <div class="card-body p-4">
-                                <p class="text-primary card-text mb-0">Article</p>
-                                <h4 class="card-title"><strong>Lorem libero donec</strong></h4>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <p class="text-primary card-text mb-0">Rác thải nhựa, Nguồn nước</p>
+                                <h4 class="card-title"><strong>Dọn Rác Sông Sài Gòn</strong></h4>
+                                <p class="card-text">Dự án 'Dọn Rác Quanh Sông Sài Gòn' là một nỗ lực cộng đồng đơn giản nhưng ý nghĩa, nhằm tạo ra một môi trường sạch sẽ và xanh đẹp hơn.&nbsp;</p>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                                 </div>
@@ -115,11 +114,11 @@
                     </div>
                     <div class="col">
                         <div class="card">
-                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="~/Content/img/project3.jpg"">
                             <div class="card-body p-4">
-                                <p class="text-primary card-text mb-0">Article</p>
-                                <h4 class="card-title"><strong>Lorem libero donec</strong></h4>
-                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <p class="text-primary card-text mb-0">Công nghệ xanh</p>
+                                <h4 class="card-title"><strong>Ống hút gạo</strong></h4>
+                                <p class="card-text">Chúng tôi cung cấp các ống hút thân thiện với môi trường, được làm từ các vật liệu tái chế, để thay thế ống hút nhựa truyền thống nhằm bảo vệ môi trường.</p>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                                 </div>
@@ -139,37 +138,39 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section style="background-color: #D9D9D9;">
             <div class="container py-4 py-xl-5">
                 <div class="row gy-4 gy-md-0">
                     <div class="col-md-6">
-                        <div class="p-xl-5 m-xl-5"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
+                        <div class="p-xl-5 m-xl-5">
+                        <img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="~/Content/img/trust.jpeg" ></div>
                     </div>
                     <div class="col-md-6 d-md-flex align-items-md-center">
                         <div style="max-width: 350px;">
-                            <h2 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h2>
-                            <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Button</a>
+                            <h2 class="text-uppercase fw-bold">Niềm tin và trách nhiệm</h2>
+                            <p class="my-3">Chúng tôi luôn đặt niềm tin và trách nhiệm lên hàng đầu. Chúng tôi tin rằng mỗi cá nhân có trách nhiệm bảo vệ môi trường và góp phần vào việc duy trì hành tinh xanh sạch.&nbsp;</p><a class="btn btn-outline-primary btn-lg" role="button" href="#">Bảo vệ môi trường ngay!</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section>
             <div class="container py-4 py-xl-5">
                 <div class="row mb-5">
                     <div class="col-md-8 col-xl-6 text-center mx-auto">
-                        <h2>Testimonials</h2>
+                        <h2>Phản hồi từ người dùng</h2>
                     </div>
                 </div>
                 <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-lg-3">
                     <div class="col">
                         <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-center">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus.</p>
+                            <p class="text-center">Tôi tin tưởng vào sứ mệnh phi lợi nhuận của trang web này. Chúng ta cần hành động ngay để bảo vệ trái đất.</p>
                             <div class="d-flex">
                                 <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
                                 <div>
-                                    <p class="fw-bold text-primary mb-0">John Smith</p>
-                                    <p class="text-muted mb-0">Erat netus</p>
+                                    <p class="fw-bold text-primary mb-0">Thân Huy</p>
+                                    <p class="text-muted mb-0">Người dùng</p>
                                 </div>
                             </div>
                             <div class="card border-0 shadow-none">
@@ -179,12 +180,12 @@
                     </div>
                     <div class="col">
                         <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-center">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus.</p>
+                            <p class="text-center">Tôi rất ấn tượng với dự án này. Chúng ta hãy cùng nhau bảo vệ môi trường cũng như môi trường sống của chúng ta!</p>
                             <div class="d-flex">
                                 <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
                                 <div>
-                                    <p class="fw-bold text-primary mb-0">John Smith</p>
-                                    <p class="text-muted mb-0">Erat netus</p>
+                                    <p class="fw-bold text-primary mb-0">Alex Nguyễn</p>
+                                    <p class="text-muted mb-0">Nhà sáng tạo nội dung</p>
                                 </div>
                             </div>
                             <div class="card border-0 shadow-none">
@@ -194,12 +195,12 @@
                     </div>
                     <div class="col">
                         <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-center">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus.</p>
+                            <p class="text-center">Tôi thích cách trang web tập trung vào bảo vệ môi trường. Hy vọng dự án này sẽ lan tỏa tới nhiều nơi hơn.</p>
                             <div class="d-flex">
                                 <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
                                 <div>
-                                    <p class="fw-bold text-primary mb-0">John Smith</p>
-                                    <p class="text-muted mb-0">Erat netus</p>
+                                    <p class="fw-bold text-primary mb-0">Xuân Thái</p>
+                                    <p class="text-muted mb-0">Nhà hảo tâm</p>
                                 </div>
                             </div>
                             <div class="card border-0 shadow-none">
