--- a/website-projexts/Views/Shared/_Layout.cshtml
+++ b/website-projexts/Views/Shared/_Layout.cshtml
@@ -13,11 +13,11 @@
             <a class="navbar-brand logo" href="#">Company</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Trang chủ</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">TRAng chủ</a></li>
                     <li class="nav-item"><a class="nav-link" href="features.html">Tính năng</a></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Khám phá</a></li>
                     <li class="nav-item"><a class="nav-link" href="about-us.html">Về chúng tôi</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Đăng Kí</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Đăng Nhập</a></li>
                 </ul>
             </div>
         </div>
@@ -29,41 +29,41 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <h5>Get started</h5>
+                    <h5>Bắt đầu</h5>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Sign up</a></li>
-                        <li><a href="#">Downloads</a></li>
+                        <li><a href="#">Trang chủ</a></li>
+                        <li><a href="#">Đăng ký</a></li>
+                        <li><a href="#">Đăng nhập</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>About us</h5>
+                    <h5>Về chúng tôi</h5>
                     <ul>
-                        <li><a href="#">Company Information</a></li>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Reviews</a></li>
+                        <li><a href="#">Thông tin</a></li>
+                        <li><a href="#">Liên hệ</a></li>
+                        <li><a href="#">Phản hồi</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>Support</h5>
+                    <h5>Khám phá</h5>
                     <ul>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Help desk</a></li>
-                        <li><a href="#">Forums</a></li>
+                        <li><a href="#">Danh mục</a></li>
+                        <li><a href="#">Tìm kiếm</a></li>
+                        <li><a href="#">Hỗ trợ</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-3">
-                    <h5>Legal</h5>
+                    <h5>Chính sách</h5>
                     <ul>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Điều khoản dịch vụ</a></li>
+                        <li><a href="#">Điều khoản sử dụng</a></li>
+                        <li><a href="#">Chính sách bảo mật</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
-            <p>© 2023 Copyright Text</p>
+            <p>© 2023 not Copyright&nbsp;</p>
         </div>
     </footer>
 
